--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,16 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    sourceSets {
+        String sharedTestDir = 'src/sharedTest/java'
+        test {
+            java.srcDir sharedTestDir
+        }
+        androidTest {
+            java.srcDir sharedTestDir
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -42,14 +52,15 @@ dependencies {
     // coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.1'
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.1'
+    androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.1'
 
     // hilt
     implementation 'com.google.dagger:hilt-android:2.38.1'
     kapt 'com.google.dagger:hilt-compiler:2.38.1'
-    androidTestImplementation  'com.google.dagger:hilt-android-testing:2.38.1'
-    kaptAndroidTest 'com.google.dagger:hilt-compiler:2.38.1'
     testImplementation 'com.google.dagger:hilt-android-testing:2.38.1'
     kaptTest 'com.google.dagger:hilt-compiler:2.38.1'
+    androidTestImplementation  'com.google.dagger:hilt-android-testing:2.38.1'
+    kaptAndroidTest 'com.google.dagger:hilt-compiler:2.38.1'
 
     // androidx testing
     testImplementation 'androidx.test:core:1.4.0'
@@ -58,11 +69,24 @@ dependencies {
     testImplementation 'androidx.test.ext:junit:1.1.3'
     testImplementation 'androidx.test.ext:truth:1.4.0'
     testImplementation 'com.google.truth:truth:1.1'
+    androidTestImplementation 'androidx.test:core:1.4.0'
+    androidTestImplementation 'androidx.test:runner:1.4.0'
+    androidTestImplementation 'androidx.test:rules:1.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.ext:truth:1.4.0'
+    androidTestImplementation 'com.google.truth:truth:1.1'
 
     // mocking & faking
     testImplementation 'io.mockk:mockk:1.12.0'
     testImplementation 'io.github.serpro69:kotlin-faker:1.8.0-rc.0'
+    androidTestImplementation 'io.github.serpro69:kotlin-faker:1.8.0-rc.0'
 
+    // network
+    implementation 'com.squareup.okhttp3:okhttp:4.9.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
+    implementation 'com.squareup.moshi:moshi:1.12.0'
+    kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.12.0'
 }
 
 kapt {
