--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0-beta01"
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'junit:junit:4.13.2'
 
@@ -89,6 +90,13 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
     implementation 'com.squareup.moshi:moshi:1.12.0'
     kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.12.0'
+
+    // compose
+    implementation 'androidx.compose.ui:ui:1.0.2'
+    implementation 'androidx.compose.ui:ui-tooling:1.0.2'
+    implementation 'androidx.compose.foundation:foundation:1.0.2'
+    implementation 'androidx.compose.material:material:1.0.2'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.4.0-beta01'
 }
 
 kapt {
