--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,6 +109,10 @@ dependencies {
     implementation 'androidx.compose.material:material:1.0.2'
     implementation 'androidx.activity:activity-compose:1.3.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.4.0-beta01'
+
+    // coil
+    implementation 'io.coil-kt:coil:1.3.2'
+    implementation 'io.coil-kt:coil-compose:1.3.2'
 }
 
 kapt {
