--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.LinioFavorites">
+        android:theme="@style/Theme.LinioFavorites"
+        android:usesCleartextTraffic="true">
         <activity
             android:name=".core.entrypoint.MainActivity"
             android:exported="true"
