--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,6 +91,7 @@ dependencies {
 
     // mocking & faking
     testImplementation 'io.mockk:mockk:1.12.0'
+    androidTestImplementation 'io.mockk:mockk-android:1.12.0'
     testImplementation 'io.github.serpro69:kotlin-faker:1.8.0-rc.0'
     androidTestImplementation 'io.github.serpro69:kotlin-faker:1.8.0-rc.0'
 
@@ -109,6 +110,8 @@ dependencies {
     implementation 'androidx.compose.material:material:1.0.2'
     implementation 'androidx.activity:activity-compose:1.3.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.4.0-beta01'
+    androidTestImplementation("androidx.compose.ui:ui-test-junit4:1.0.2")
+    debugImplementation("androidx.compose.ui:ui-test-manifest:1.0.2")
 
     // coil
     implementation 'io.coil-kt:coil:1.3.2'
